more alignment fixes- hopefully

--- a/dev/static/css/style.css
+++ b/dev/static/css/style.css
@@ -1,12 +1,12 @@
 /*************** VARIABLES ***/
-#debrief p, #section-content, #story-content, #hours, #location, #icon-content {
+#debrief p, #story-content, #icon-content {
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
 
-#debrief p, #story-content, #icon-content {
+#debrief p, #story-content, #icon-content, #icon-logo {
   margin-left: auto;
   margin-right: auto; }
 
@@ -35,7 +35,11 @@
 .blurb {
   width: 50%;
   height: 100%;
-  background-color: #56504C; }
+  background-color: #56504C;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 #storiesPreview {
   height: 280px;
@@ -43,33 +47,39 @@
   background-size: cover; }
 
 #story-content {
-  width: 80%;
+  width: 99%;
   text-align: center; }
 
 .story p {
-  width: 200px;
+  width: 230px;
   padding: 0px 3em;
   display: inline-block; }
 
 #hours, #location {
-  width: 38%;
-  height: 38%;
-  padding-left: 6%;
-  padding-right: 6%; }
+  width: 30%;
+  height: 30%;
+  display: inline-block; }
+
+#hours p {
+  display: inline-block; }
 
 #icons {
+  width: 100%;
   height: 330px;
   background-color: #FFFFFC; }
 
 #icon-content {
-  width: 40%; }
-  #icon-content img {
-    padding: 3%; }
+  width: 90%;
+  text-align: center; }
+  #icon-content p {
+    width: 45%;
+    display: inline-block; }
 
 #icon-logo {
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto; }
+  width: 90%; }
+  #icon-logo img {
+    display: inline-block;
+    padding: 0px 10px 10px 10px; }
 
 .icon-resize {
   width: auto;
@@ -105,14 +115,15 @@
 #muiristasBio {
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 75%;
   padding-top: 50px;
   padding-bottom: 50px; }
-  #muiristasBio img {
-    width: 250px;
-    height: 375px;
-    margin-right: 2%;
-    margin-left: 2%; }
+
+#muiristaPhoto img {
+  width: 250px;
+  height: 375px;
+  margin-right: 2%;
+  margin-left: 2%; }
 
 #sources {
   height: 392px;
@@ -170,14 +181,14 @@
   height: 450px; }
 
 /*************** VARIABLES ***/
-#debrief p, #section-content, #story-content, #hours, #location, #icon-content {
+#debrief p, #story-content, #icon-content {
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
 
-#debrief p, #story-content, #icon-content {
+#debrief p, #story-content, #icon-content, #icon-logo {
   margin-left: auto;
   margin-right: auto; }
 
