--- a/dev/static/scss/_variables.scss
+++ b/dev/static/scss/_variables.scss
@@ -32,9 +32,3 @@ $header-link-font: "Montserrat", "Helvetica Neue", sans-serif;
 	margin-left: auto;
 	margin-right: auto;
 }
-
-%absolute-center {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
