--- a/dev/static/scss/index.scss
+++ b/dev/static/scss/index.scss
@@ -33,10 +33,10 @@
 	width: 50%;
 	height: 100%;
 	background-color: $dark-brown;
-}
-
-#section-content {
-	@extend %vertical-align;	
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 // Stories section
@@ -50,13 +50,13 @@
 #story-content {
 	@extend %vertical-align;
 	@extend %horizontal-align;
-	width: 80%;
+	width: 99%;
 	text-align: center;
 }
 
 .story {
 	p {
-		width: 200px;
+		width: 230px;
 		padding: 0px 3em;
 		display: inline-block;
 	}
@@ -68,32 +68,42 @@
 }
 
 #hours, #location {
-	width: 38%;
-	height: 38%;
-	@extend %vertical-align;
-	padding-left: 6%;
-	padding-right: 6%;
+	width: 30%;
+	height: 30%;
+	display: inline-block;
+}
+
+#hours {
+	p {
+		display: inline-block;
+	}
 }
 
 // Icons section
 #icons {
+	width: 100%;
 	height: 330px;
 	background-color: $off-white;
 }
 
 #icon-content {
 	@extend %vertical-align;
-	width: 40%;
 	@extend %horizontal-align;
-	img {
-		padding: 3%;
+	width: 90%;
+	text-align: center;
+	p {
+		width: 45%;
+		display: inline-block;
 	}
 }
 
 #icon-logo {
-	width: 40%;
-	margin-left: auto;
-	margin-right: auto;
+	@extend %horizontal-align;
+	width: 90%;
+	img {
+		display: inline-block;
+		padding: 0px 10px 10px 10px;
+	}
 }
 
 .icon-resize {
